--- a/style/contratante.css
+++ b/style/contratante.css
@@ -23,7 +23,7 @@ p {
 .grid_funcionario {
     margin: 20px auto;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(160px, auto));
+    grid-template-columns: repeat(auto-fit, minmax(180px, auto));
     gap:50px;
     width: 80%;
 }
@@ -42,7 +42,7 @@ p {
 
 .descricao {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 80%;
 }
 .descricao img {
