--- a/style/contratante.css
+++ b/style/contratante.css
@@ -1,9 +1,65 @@
 *{margin:0; padding:0; box-sizing: border-box;}*
+
+body {
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(105,213,186,0.6026785714285714) 0%, rgba(0,212,255,1) 100%);
+}
+/*Cabeçalho*/
+nav {
+    width:100%;
+    height: auto;
+    display: flex;
+    justify-content: space-evenly;
+
+}
+ul {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    max-width:800px;
+    min-width:600px
+}
+li {
+    
+    list-style: none;
+}
+li a {
+    text-decoration: none;
+    color:black;
+    font-size:20px;
+    font-family: arial;
+    padding:8px 20px;
+    border-radius:18px;
+}
+li a:hover {
+    background-color: rgba(82,231,179,.6);
+    color: lightgrey;
+}
+.logo_empresa  {
+    width:400px;
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+}
+.logo {
+    width:90px;
+    padding: 5px 10px;
+}
 p {
     padding: 5px 5px;
     font-family: arial;
     line-height: 20px;
 }
+h1 {
+    font-family: sans-serif;
+    padding-top:60px;
+    margin: 5px 10px;
+
+}
+main {
+    position: relative;
+}
+
 .conteudo {
     display: flex;
     flex-direction: column;
@@ -14,20 +70,40 @@ p {
     
 }
 .filtro {
-    width: 100%;
-    height: 120px;
-    background-color: skyblue;
+    width: 500px;
+    height: 50px;
+    border:1px solid grey;
     margin-top:30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding:5px 10px;
+    border-radius: 30px;
+    align-items: center;
+    
 }
-
+.filtro > input {
+    width:400px;
+    height: 40px;
+    background-color: transparent;
+    padding-left: 8px;
+    border:none;
+    outline: none;
+    font-size: 18px;
+}
+.lupa {
+    width:30px;
+    padding-right:10px;
+}
 .grid_funcionario {
-    margin: 20px auto;
+    margin: 40px auto;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(180px, auto));
     gap:50px;
     width: 80%;
 }
 .grid_funcionario > div {
+    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -47,4 +123,139 @@ p {
 }
 .descricao img {
     height: 20px;
+}
+
+
+/*Rodapé*/
+p {
+    color:white;
+}
+h3,h5 {
+    color:white;
+    font-family: arial;
+    font-size: 1.2rem;
+    font-weight: 100;
+}
+h6 {
+    color: #00FFD1;
+    font-family: arial;
+    font-size: 0.9rem;
+    font-weight: 100;
+}
+.footer {
+    width:100%;
+    height: auto;
+    background-color: #000;
+}
+.container_footer {
+    max-width:1000px;
+    min-width: 360px;
+    min-height: 100px;
+    max-height: 360px;
+    height: 100%;
+    margin:0 auto;
+    display: block;
+    padding:15px 10px;
+}
+.flex {
+    display: flex;
+    justify-content: space-evenly;
+    
+}
+.flex > div {
+    min-height: 100px;
+    max-height: 400px;
+}
+.informacoes-footer {
+    width:55%;
+    display: flex;
+    justify-content: space-evenly;
+}
+.container_redes_sociais-footer {
+    width:50%;
+    display: inline-block;
+    
+}
+.redes_sociais-footer {
+    width:60%;
+    height: 100px;
+    margin:0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.redes_sociais-footer > p {
+    text-align: center;
+    font-size: 16px;
+    font-family: arial;
+}
+.icons-footer {
+    width:100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+.icons-footer > a > img {
+    width: 40px;
+    height: 40px;
+}
+/*Estilizando descricoes */
+.foto_perfil_footer {
+    width: 60px;
+    height: 60px;
+    position: relative;
+    text-align: center;
+}
+.foto_perfil-footer > img {
+    width:100px;
+    height: 100px;
+    border-radius: 50px;
+    
+}
+.descricao-footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+}
+
+/*Responsividade*/
+
+@media screen and (max-width:900px){
+    .flex {
+        flex-direction: column;
+    }
+    .informacoes-footer {
+        width:80%;
+    }
+    
+    .container_redes_sociais-footer {
+        width:100%;
+    }
+    .redes_sociais-footer {    
+        width:300px;    
+    }
+}
+@media screen and (max-width:600px){
+    .informacoes-footer {
+        width: 100%;
+        position: relative;
+    }
+    .descricao-footer {
+        width:70%;
+        margin-right: 0;
+    }
+    h3,h5 {
+        font-size: 0.9rem;
+    }
+    h6 {
+        font-size: 0.8rem;
+    }
+    .redes_sociais-footer {
+        width:240px;
+        margin-right:0;
+    }
+    .icons-footer > a > img {
+        width: 30px;
+        height: 30px;
+    }
 }
